--- a/index.html
+++ b/index.html
@@ -1,52 +1,48 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-  <style src="stile/index.css"></style>
-<body>
-
-<div class="header">
-  <h2>Remote garage ribelle</h2>
-</div>
-
-<div class="row">
-  <div class="leftcolumn">
-    <div class="card">
-      <h2>UNGHERIA, HUNGARORING</h2>
-      <h5>Ago 7, 2022</h5>
-      <div class="fakeimg" style="height:200px;">Image</div>
-      <p>Che si sarà inventato il muretto dei campioni per far finire fuori dal podio entrambe le vetture con conseguente vittoria di super Max partito decimo? Se siete curiosi questo è l'articolo che fa al caso vostro</p>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="style/index.css" href="example.css" media=”screen” />
+  </head>
+  <body>
+    <div class="header">
+      <h2>Remote garage ribelle</h2>
     </div>
-  </div>
-  <div class="rightcolumn">
-    <div class="card">
-      <h2>Chi sono?</h2>
-      <div class="fakeimg" style="height:100px;">Image</div>
-      <p>Sono il primo prototipo di remote garage, esiliato da qualche parte nel mondo perché il mio capo ha un modo tutto suo di vedere la Formula 1</p>
+    <div class="row">
+      <div class="leftcolumn">
+        <div class="card">
+          <h2>UNGHERIA, HUNGARORING</h2>
+          <h5>Ago 7, 2022</h5>
+          <div class="fakeimg" style="height:200px;">Image</div>
+          <p>Che si sarà inventato il muretto dei campioni per far finire fuori dal podio entrambe le vetture con conseguente vittoria di super Max partito decimo? Se siete curiosi questo è l'articolo che fa al caso vostro</p>
+        </div>
+      </div>
+      <div class="rightcolumn">
+        <div class="card">
+          <h2>Chi sono?</h2>
+          <div class="fakeimg" style="height:100px;">Image</div>
+          <p>Sono il primo prototipo di remote garage, esiliato da qualche parte nel mondo perché il mio capo ha un modo tutto suo di vedere la Formula 1</p>
+        </div>
+        <div class="card">
+          <h3>Classifica piloti</h3>
+          <div class="fakeimg">Image</div><br>
+          <div class="fakeimg">Image</div><br>
+          <div class="fakeimg">Image</div>
+        </div>
+        <div class="card">
+          <h3>Classifica costruttori</h3>
+          <div class="fakeimg">Image</div><br>
+          <div class="fakeimg">Image</div><br>
+          <div class="fakeimg">Image</div>
+        </div>
+        <div class="card">
+          <h3>Seguimi</h3>
+          <p>Cose fighe per renderizzarmi su Instagram</p>
+        </div>
+      </div>
     </div>
-    <div class="card">
-      <h3>Classifica piloti</h3>
-      <div class="fakeimg">Image</div><br>
-      <div class="fakeimg">Image</div><br>
-      <div class="fakeimg">Image</div>
+    <div class="footer">
+      <h2>Footer</h2>
     </div>
-    <div class="card">
-      <h3>Classifica costruttori</h3>
-      <div class="fakeimg">Image</div><br>
-      <div class="fakeimg">Image</div><br>
-      <div class="fakeimg">Image</div>
-    </div>
-    <div class="card">
-      <h3>Seguimi</h3>
-      <p>Cose fighe per renderizzarmi su Instagram</p>
-    </div>
-  </div>
-</div>
-
-<div class="footer">
-  <h2>Footer</h2>
-</div>
-
-</body>
+  </body>
 </html>
