--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="style/index.css" href="example.css" media=”screen” />
+    <link rel="stylesheet" href="style/index.css"/>
   </head>
   <body>
     <div class="header">
