--- a/index.html
+++ b/index.html
@@ -1,48 +1,117 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>W3.CSS Template</title>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style/index.css"/>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+    <style>
+      body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
+    </style>
   </head>
-  <body>
-    <div class="header">
-      <h2>Remote garage ribelle</h2>
+  <body class="w3-light-grey">
+    <div class="w3-content" style="max-width:1400px">
+      <header class="w3-container w3-center w3-padding-32"> 
+        <h1><b>MY BLOG</b></h1>
+        <p>Welcome to the blog of <span class="w3-tag">unknown</span></p>
+      </header>
+      <div class="w3-row">
+        <div class="w3-col l8 s12">
+          <div class="w3-card-4 w3-margin w3-white">
+            <img src="/w3images/woods.jpg" alt="Nature" style="width:100%">
+            <div class="w3-container">
+              <h3><b>TITLE HEADING</b></h3>
+              <h5>Title description, <span class="w3-opacity">April 7, 2014</span></h5>
+            </div>
+            <div class="w3-container">
+              <p>Che si sarà inventato il muretto dei campioni per far finire fuori dal podio entrambe le vetture con conseguente vittoria di super Max partito decimo? Se siete curiosi questo è l'articolo che fa al caso vostro</p>
+              <div class="w3-row">
+                <div class="w3-col m8 s12">
+                  <p><button class="w3-button w3-padding-large w3-white w3-border"><b>READ MORE »</b></button></p>
+                </div>
+                <div class="w3-col m4 w3-hide-small">
+                  <p><span class="w3-padding-large w3-right"><b>Comments  </b> <span class="w3-tag">0</span></span></p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <hr>
+          <div class="w3-card-4 w3-margin w3-white">
+            <img src="/w3images/bridge.jpg" alt="Norway" style="width:100%">
+            <div class="w3-container">
+              <h3><b>BLOG ENTRY</b></h3>
+              <h5>Title description, <span class="w3-opacity">April 2, 2014</span></h5>
+            </div>
+            <div class="w3-container">
+              <p>Che si sarà inventato il muretto dei campioni per far finire fuori dal podio entrambe le vetture con conseguente vittoria di super Max partito decimo? Se siete curiosi questo è l'articolo che fa al caso vostro</p>
+              <div class="w3-row">
+                <div class="w3-col m8 s12">
+                  <p><button class="w3-button w3-padding-large w3-white w3-border"><b>READ MORE »</b></button></p>
+                </div>
+                <div class="w3-col m4 w3-hide-small">
+                  <p><span class="w3-padding-large w3-right"><b>Comments  </b> <span class="w3-badge">2</span></span></p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="w3-col l4">
+          <div class="w3-card w3-margin w3-margin-top">
+            <img src="/w3images/avatar_g.jpg" style="width:100%">
+            <div class="w3-container w3-white">
+              <h4><b>Chi sono?</b></h4>
+              <p>Sono il primo prototipo di remote garage, esiliato da qualche parte nel mondo perché il mio capo ha un modo tutto suo di vedere la Formula 1</p>
+            </div>
+          </div><hr>
+          <div class="w3-card w3-margin">
+            <div class="w3-container w3-padding">
+              <h4>Popular Posts</h4>
+            </div>
+            <ul class="w3-ul w3-hoverable w3-white">
+              <li class="w3-padding-16">
+                <img src="/w3images/workshop.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+                <span class="w3-large">Lorem</span><br>
+                <span>Sed mattis nunc</span>
+              </li>
+              <li class="w3-padding-16">
+                <img src="/w3images/gondol.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+                <span class="w3-large">Ipsum</span><br>
+                <span>Praes tinci sed</span>
+              </li>
+              <li class="w3-padding-16">
+                <img src="/w3images/skies.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+                <span class="w3-large">Dorum</span><br>
+                <span>Ultricies congue</span>
+              </li>
+              <li class="w3-padding-16 w3-hide-medium w3-hide-small">
+                <img src="/w3images/rock.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+                <span class="w3-large">Mingsum</span><br>
+                <span>Lorem ipsum dipsum</span>
+              </li>
+            </ul>
+          </div>
+          <hr>
+          <div class="w3-card w3-margin">
+            <div class="w3-container w3-padding">
+              <h4>Tags</h4>
+            </div>
+            <div class="w3-container w3-white">
+              <p><span class="w3-tag w3-black w3-margin-bottom">Travel</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">New York</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">London</span>
+                <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">IKEA</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">NORWAY</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">DIY</span>
+                <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Ideas</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Baby</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Family</span>
+                <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">News</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Clothing</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Shopping</span>
+                <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Sports</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Games</span>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div><br>
     </div>
-    <div class="row">
-      <div class="leftcolumn">
-        <div class="card">
-          <h2>UNGHERIA, HUNGARORING</h2>
-          <h5>Ago 7, 2022</h5>
-          <div class="fakeimg" style="height:200px;">Image</div>
-          <p>Che si sarà inventato il muretto dei campioni per far finire fuori dal podio entrambe le vetture con conseguente vittoria di super Max partito decimo? Se siete curiosi questo è l'articolo che fa al caso vostro</p>
-        </div>
-      </div>
-      <div class="rightcolumn">
-        <div class="card">
-          <h2>Chi sono?</h2>
-          <div class="fakeimg" style="height:100px;">Image</div>
-          <p>Sono il primo prototipo di remote garage, esiliato da qualche parte nel mondo perché il mio capo ha un modo tutto suo di vedere la Formula 1</p>
-        </div>
-        <div class="card">
-          <h3>Classifica piloti</h3>
-          <div class="fakeimg">Image</div><br>
-          <div class="fakeimg">Image</div><br>
-          <div class="fakeimg">Image</div>
-        </div>
-        <div class="card">
-          <h3>Classifica costruttori</h3>
-          <div class="fakeimg">Image</div><br>
-          <div class="fakeimg">Image</div><br>
-          <div class="fakeimg">Image</div>
-        </div>
-        <div class="card">
-          <h3>Seguimi</h3>
-          <p>Cose fighe per renderizzarmi su Instagram</p>
-        </div>
-      </div>
-    </div>
-    <div class="footer">
-      <h2>Footer</h2>
-    </div>
+    <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
+      <button class="w3-button w3-black w3-disabled w3-padding-large w3-margin-bottom">Previous</button>
+      <button class="w3-button w3-black w3-padding-large w3-margin-bottom">Next »</button>
+      <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+    </footer>
   </body>
 </html>
