--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
               <h4><b>Chi sono?</b></h4>
               <p>Sono il primo prototipo di remote garage, esiliato da qualche parte nel mondo perché il mio capo ha un modo tutto suo di vedere la Formula 1</p>
             </div>
-          </div><hr>
+          </div>
+          <hr>
           <div class="w3-card w3-margin">
             <div class="w3-container w3-padding">
               <h4>Popular Posts</h4>
