--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
                 </div>
               </div>
             </div>
-          </div>
-          <hr>
+          </div><hr>
           <div class="w3-card-4 w3-margin w3-white">
             <img src="/w3images/bridge.jpg" alt="Norway" style="width:100%">
             <div class="w3-container">
@@ -63,8 +62,7 @@
               <h4><b>Chi sono?</b></h4>
               <p>Sono il primo prototipo di remote garage, esiliato da qualche parte nel mondo perché il mio capo ha un modo tutto suo di vedere la Formula 1</p>
             </div>
-          </div>
-          <hr>
+          </div><hr>
           <div class="w3-card w3-margin">
             <div class="w3-container w3-padding">
               <h4>Popular Posts</h4>
@@ -91,20 +89,6 @@
                 <span>Lorem ipsum dipsum</span>
               </li>
             </ul>
-          </div>
-          <hr>
-          <div class="w3-card w3-margin">
-            <div class="w3-container w3-padding">
-              <h4>Tags</h4>
-            </div>
-            <div class="w3-container w3-white">
-              <p><span class="w3-tag w3-black w3-margin-bottom">Travel</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">New York</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">London</span>
-                <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">IKEA</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">NORWAY</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">DIY</span>
-                <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Ideas</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Baby</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Family</span>
-                <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">News</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Clothing</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Shopping</span>
-                <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Sports</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Games</span>
-              </p>
-            </div>
           </div>
         </div>
       </div><br>
