--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
           <div class="w3-card-4 w3-margin w3-white">
             <img src="/w3images/woods.jpg" alt="Nature" style="width:100%">
             <div class="w3-container">
-              <h3><b>TITLE HEADING</b></h3>
-              <h5>Title description, <span class="w3-opacity">April 7, 2014</span></h5>
+              <h3><b>GP di Ungheria</b></h3>
+              <h5>Hungaroring, <span class="w3-opacity">31 luglio 2022</span></h5>
             </div>
             <div class="w3-container">
               <p>Che si sarà inventato il muretto dei campioni per far finire fuori dal podio entrambe le vetture con conseguente vittoria di super Max partito decimo? Se siete curiosi questo è l'articolo che fa al caso vostro</p>
@@ -39,8 +39,8 @@
           <div class="w3-card-4 w3-margin w3-white">
             <img src="/w3images/bridge.jpg" alt="Norway" style="width:100%">
             <div class="w3-container">
-              <h3><b>BLOG ENTRY</b></h3>
-              <h5>Title description, <span class="w3-opacity">April 2, 2014</span></h5>
+              <h3><b>GP di Gran Bretagna</b></h3>
+              <h5>Silverstone, <span class="w3-opacity">3 luglio 2022</span></h5>
             </div>
             <div class="w3-container">
               <p>Che si sarà inventato il muretto dei campioni per far finire fuori dal podio entrambe le vetture con conseguente vittoria di super Max partito decimo? Se siete curiosi questo è l'articolo che fa al caso vostro</p>
