--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>W3.CSS Template</title>
+    <title>Remote garage ribelle</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -13,8 +13,8 @@
   <body class="w3-light-grey">
     <div class="w3-content" style="max-width:1400px">
       <header class="w3-container w3-center w3-padding-32"> 
-        <h1><b>MY BLOG</b></h1>
-        <p>Welcome to the blog of <span class="w3-tag">unknown</span></p>
+        <h1><b>REMOTE GARAGE RIBELLE</b></h1>
+        <p>Benvenuti nel remote garage più ribelle che ci sia</p>
       </header>
       <div class="w3-row">
         <div class="w3-col l8 s12">
