--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                   <p><button class="w3-button w3-padding-large w3-white w3-border"><b>READ MORE »</b></button></p>
                 </div>
                 <div class="w3-col m4 w3-hide-small">
-                  <p><span class="w3-padding-large w3-right"><b>Comments  </b> <span class="w3-tag">0</span></span></p>
+                  <p><span class="w3-padding-large w3-right"><b>7 agosto 2022</b></span></p>
                 </div>
               </div>
             </div>
@@ -49,7 +49,7 @@
                   <p><button class="w3-button w3-padding-large w3-white w3-border"><b>READ MORE »</b></button></p>
                 </div>
                 <div class="w3-col m4 w3-hide-small">
-                  <p><span class="w3-padding-large w3-right"><b>Comments  </b> <span class="w3-badge">2</span></span></p>
+                  <p><span class="w3-padding-large w3-right"><b>2 agosto 2022</b></span></p>
                 </div>
               </div>
             </div>
