--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Remote garage ribelle</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style/index.css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <style>
       body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
