--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Remote garage ribelle</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style/index.css"/>
+    <link rel="stylesheet" href="style/index_2.css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <style>
       body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
@@ -19,7 +19,7 @@
       <div class="w3-row">
         <div class="w3-col l8 s12">
           <div class="w3-card-4 w3-margin w3-white">
-            <img src="/w3images/woods.jpg" alt="Nature" style="width:100%">
+            <img src="images/silverstone.png" alt="Silverstone" style="width:100%">
             <div class="w3-container">
               <h3><b>GP di Gran Bretagna</b></h3>
               <h5>Silverstone, <span class="w3-opacity">3 luglio 2022</span></h5>
@@ -37,7 +37,7 @@
             </div>
           </div><hr>
           <div class="w3-card-4 w3-margin w3-white">
-            <img src="/w3images/bridge.jpg" alt="Norway" style="width:100%">
+            <img src="images/hungaroring.png" style="width:100%">
             <div class="w3-container">
               <h3><b>GP di Ungheria</b></h3>
               <h5>Hungaroring, <span class="w3-opacity">31 luglio 2022</span></h5>
@@ -46,7 +46,7 @@
               <p>Che si sarà inventato il muretto dei campioni per far finire fuori dal podio entrambe le vetture con conseguente vittoria di super Max partito decimo? Se siete curiosi questo è l'articolo che fa al caso vostro</p>
               <div class="w3-row">
                 <div class="w3-col m8 s12">
-                  <p><button class="w3-button w3-padding-large w3-white w3-border"><b>READ MORE »</b></button></p>
+                  <p><button class="w3-button w3-padding-large w3-white w3-border" onclick="window.location.href='theme/analisi.html'"><b>READ MORE »</b></button></p>
                 </div>
                 <div class="w3-col m4 w3-hide-small">
                   <p><span class="w3-padding-large w3-right"><b>2 agosto 2022</b></span></p>
