--- a/theme/analisi.html
+++ b/theme/analisi.html
@@ -1,64 +1,101 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <title>Bootstrap Example</title>
-    <meta charset="utf-8">
+    <title>Remote garage ribelle</title>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="../style/analisi.css"/>
+    <link rel="stylesheet" href="../style/index_2.css"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+    <style>
+      body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
+    </style>
   </head>
-  <body>
-    <nav class="navbar navbar-inverse">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>                        
-          </button>
-          <a class="navbar-brand" href="#">Logo</a>
-        </div>
-        <div class="collapse navbar-collapse" id="myNavbar">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <div class="container-fluid text-center">    
-      <div class="row content">
-        <div class="col-sm-2 sidenav">
-          <p><a href="#">Link</a></p>
-          <p><a href="#">Link</a></p>
-          <p><a href="#">Link</a></p>
-        </div>
-        <div class="col-sm-8 text-left"> 
-          <h1>Welcome</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          <hr>
-          <h3>Test</h3>
-          <p>Lorem ipsum...</p>
-        </div>
-        <div class="col-sm-2 sidenav">
-          <div class="well">
-            <p>ADS</p>
-          </div>
-          <div class="well">
-            <p>ADS</p>
+  <body class="w3-light-grey">
+    <div class="w3-content" style="max-width:1400px">
+      <header class="w3-container w3-center w3-padding-32"> 
+        <h1><b>REMOTE GARAGE RIBELLE</b></h1>
+        <p>Benvenuti nel remote garage più ribelle che ci sia</p>
+      </header>
+      <div class="w3-row">
+        <div class="w3-col l8 s12">
+          <div class="w3-card-4 w3-margin w3-white">
+            <img src="../images/hungaroring.png" style="width:100%">
+            <div class="w3-container">
+              <h3><b>GP di Ungheria</b></h3>
+              <h5>Hungaroring, <span class="w3-opacity">31 luglio 2022</span></h5>
+            </div>
+            <div class="w3-container">
+              <p>Non esistono aggettivi per descrivere la "strategia" Ferrari in Ungheria, un perfetto harakiri in salsa Giapponese sicuramente gradito dai motorizzati Honda</p><p>Per vari motivi tralascio l’analisi delle prove libere e delle qualifiche e mi limito a dire che molto probabilmente (per non dire sicuramente) si sarebbe potuto risparmiare un treno di gomme rosse, ma non è questo il dettaglio che ci ha fatto perdere in maniera clamorosa tutto ciò che potevamo perdere in Ungheria, anche se una rossa nuova e non leggermente usata di sicuro non avrebbe guastato.</p><p>Prima di analizzare nel dettaglio la Caporetto di Mogyoród vediamo la strategia che avrei messo in atto io se fossi stato al posto di Rueda ed in seguito analizziamo l’harakiri in salsa rossa e vediamo come, con delle variazioni, anche la strategia Ferrari avrebbe potuto portare lo stesso, non dico per forza ad una doppietta Ferrari, ma sicuramente ad un doppio podio. Do il beneficio del dubbio sulla doppietta solo perché non ho a disposizione i dati precisi su Sainz e non so quanto abbia influito il famoso sacchetto arancione, ma la vittoria di Leclerc non era minimamente in discussione.</p><p>Viste le condizioni metereologiche incerte mettere la gomma rossa al pilota che si gioca il mondiale (ovvero a Charles) è stata la prima cosa che avrei fatto, in modo tale da accumulare un vantaggio considerevole, grazie alle gomme più veloci, nel caso in cui la pioggia fosse arrivata durante i primi giri della gara. Nel caso in cui la pioggia avesse deciso di non far visita all’Hungaroring bastava utilizzare due treni di gomme medie (che Leclerc infatti ha utilizzato, ma nel modo sbagliato) e la conferma dell’efficacia di questa proposta ce l’hanno data: la Mercedes di George Russell (poleman del GP); la Redbull di Max Verstappen (vincitore del GP) ma soprattutto la stessa Pirelli (produttrice degli pneumatici della gara) che infatti la propone nella strategia “più veloce”. Conoscendo le doti di Charles molto probabilmente sarebbe scattato bene e ci avrebbe deliziato con uno dei suoi “soliti” sorpassi e molto probabilmente avrebbe superato George prima del pit, accumulando vantaggio su tutti quanti e “scappando” come già ha avuto occasione di mostrarci.</p><p>Per quanto riguarda Sainz anche io avrei optato per la gomma gialla ed attuto la stessa strategia che la Mercedes ha attuato su Lewis Hamilton (partito settimo ed arrivato secondo) e sicuramente, per non dire certamente, sarebbe arrivato a podio. E no, non è vero che hanno attutato la stessa strategia di Hamilton perché non basta montare le gomme nello stesso ordine ma bisogna saperle montare anche nei momenti giusti, cosa che la Ferrari non ha assolutamente fatto.</p><p>Invece cos’ha deciso di fare la Ferrari? Lo sappiamo che ha deciso di fare un disastro ma… quanto è stato grosso il disastro? Vediamo insieme cos’ha fatto per capire, perché in fondo si tratta di capire, giusto Binotto? Hanno messo le gomme gialle ad entrambi i piloti, tutto sommato non è stato un errore così tanto grave, alla fine si poteva “rimediare” attuando su entrambi una strategia simile ad Hamilton cercando di mettere almeno 5 secondi… facciamo 10 vista la bravura nei pit stop della Ferrari tra un pilota e l’altro, facendo in modo di mettere davanti il pilota con il ritmo migliore a tutti i costi, anche con un ordine di scuderia (per quanto a me non piacciano) se necessario, in questo caso il pilota “designato” era Charles che ha dimostrato di avere un ritmo migliore di Carlos e lo ha fatto notare più volte tramite i team radio. Ma la Ferrari, oltre a non aver fatto nulla di ciò ha deciso di deliziarci con il primo errore grave al giro 17, ovvero coprendo la strategia di Russell (che ha montato gomma rossa al via) con Sainz (che aveva gomma gialla e poteva continuare benissimo per qualche altro giro). Perché è un errore grave? Semplicemente perché buttato via una gomma che qualche giro lo poteva fare benissimo (e come vedremo più avanti quei giri sono stati cruciali) ed hai deciso di coprire una strategia diversa, ergo non aveva senso coprirla.</p><p>Charles continuerà fino al giro 22 ed uscirà davanti a Carlos, andando all’attacco di George e ci delizierà con un sorpasso sul pilota Mercedes all’esterno del rettilineo al giro 31, dopo un duello durato ben 4 giri in cui George ha ricordato a tutti perché è un pilota Mercedes. Arriviamo così al giro 40, dove Rueda decidere di commettere un errore così grave che dovrebbe togliergli la laurea d’ufficio, ovvero quello di coprire l’undercut di Max, che monta una gomma gialla al giro 39 (gomma che, come sappiamo, farà ben 31 giri) chiamando ai box un Leclerc con gomma più fresche di ben 5 giri rispetto compagno per mettere una gomma bianca che la Pirelli stessa ha sconsigliato (se non per le strategie ad una sosta) e che a dimostrato di essere ben peggiore delle aspettative sulle vetture che l’hanno già montata in questi 40 giri. Charles stesso ha dichiarato che la gomma era in ottime condizioni e poteva continuare, aggiungo io, per altri 10/15 giri.</p><p>Leclerc poi farà un altro pit stop al giuro 54, guarda caso all’interno del range di durata che ho stimato per quella gomma gialla, e taglierà il traguardo con 16 secondi di distacco da Max, guarda caso con un tempo inferiore ai 21 secondi persi per il secondo (assurdo) pit stop. Considerando poi che il delta stimato da Pirelli tra le gialle e le bianche è di circa un secondo a giro, moltiplicato per i 14 giri con le bianche fatti da Charles, abbiamo un ulteriore perdita di tempo di circa 14 secondi, che sommati al tempo perso per il pit stop sarebbero bastati per far arrivare il Monegasco avanti a Max di corca 18 secondi e, considerato che Max aveva gomme montate soltanto 4 giri dopo la metà della gara, era difficile (se non impossibile) che Max lo superasse ed andasse a vincere il GP. E non c’è VSC che tenga, sarebbe stata una gialla di 29 giri contro una rossa di 14 giri, tra l’altro con pioggia forte.</p><p>Se ancora non siete convinti dell’analisi, o se vi chiamate Iñaki Rueda, vi do la prova finale  della follia, ovvero i dati relativi ai giri effettuati dei piloti citati e la tipologia della gomma:</p><p>LEC: GIALLA (22) – GIALLA (18) – BIANCA (14) – ROSSA (16)<br>SAI: GIALLA (18) – GIALLA (29) – ROSSA (23)<br>HAM: GIALLA (21) – GIALLA (30) – ROSSA (19)<br>RUS: ROSSA (17) – GIALLA (23) – GIALLA (30)<br>VER: ROSSA (17) – GIALLA (22) – GIALLA (31)</p><p>Come mai la Ferrari ha fatto fare a Sainz più giri con la rossa (usata) che con la gialla (nuova) nonostante quella più durevole sia la gialla? E perché a Leclerc non hanno provato a fargli fare 32 giri con la gialla, visato che Max ne ha fatti 31? E non ditemi che il carico di benzina alla fine è minore e c’è meno grado perché Hamilton ne ha fatti comunque 30 con, presumibilmente, lo stesso carico di benzina.</p>
+            </div>
           </div>
         </div>
-      </div>
+        <div class="w3-col l4">
+          <div class="w3-card w3-margin w3-margin-top">
+            <img src="/w3images/avatar_g.jpg" style="width:100%">
+            <div class="w3-container w3-white">
+              <h4><b>Chi sono?</b></h4>
+              <p>Sono il primo prototipo di remote garage, esiliato da qualche parte nel mondo perché il mio capo ha un modo tutto suo di vedere la Formula 1</p>
+            </div>
+          </div><hr>
+          <div class="w3-card w3-margin">
+            <div class="w3-container w3-padding">
+              <h4>Classifica costruttori</h4>
+            </div>
+            <ul class="w3-ul w3-hoverable w3-white">
+              <li class="w3-padding-16">
+                <img src="/w3images/workshop.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+                <span class="w3-large">Max Verstappen</span><br>
+                <span>Redbull</span>
+              </li>
+              <li class="w3-padding-16">
+                <img src="/w3images/gondol.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+                <span class="w3-large">Charles Leclerc</span><br>
+                <span>Ferrari</span>
+              </li>
+              <li class="w3-padding-16">
+                <img src="/w3images/skies.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+                <span class="w3-large">Sergio Perez</span><br>
+                <span>Redbull</span>
+              </li>
+              <li class="w3-padding-16 w3-hide-medium w3-hide-small">
+                <img src="/w3images/rock.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+                <span class="w3-large">George Russell</span><br>
+                <span>Mercedes</span>
+              </li>
+            </ul>
+          </div>
+          <div class="w3-card w3-margin">
+            <div class="w3-container w3-padding">
+              <h4>Classifica costruttori</h4>
+            </div>
+            <ul class="w3-ul w3-hoverable w3-white">
+              <li class="w3-padding-16">
+                <img src="/w3images/workshop.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+                <span class="w3-large">Redbull</span><br>
+                <span>Max Verstappen & Sergio Perez</span>
+              </li>
+              <li class="w3-padding-16">
+                <img src="/w3images/gondol.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+                <span class="w3-large">Ferrari</span><br>
+                <span>Charles Leclerc & Carlos Sainz jr.</span>
+              </li>
+              <li class="w3-padding-16">
+                <img src="/w3images/skies.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+                <span class="w3-large">Mercedes</span><br>
+                <span>Lewis Hamilton & George Russell</span>
+              </li>
+              <li class="w3-padding-16 w3-hide-medium w3-hide-small">
+                <img src="/w3images/rock.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+                <span class="w3-large">McLaren</span><br>
+                <span>Lando Norris & Daniel Ricciardo</span>
+              </li>
+            </ul>
+          </div><hr>
+        </div>
+      </div><br>
     </div>
-    <footer class="container-fluid text-center">
-      <p>Footer Text</p>
+    <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
+      <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
     </footer>
   </body>
 </html>
