--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies con
             <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Sports</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Games</span>
           </p>
         </div>
-      </div>
+      </div><br>
     </div>
     <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
       <button class="w3-button w3-black w3-disabled w3-padding-large w3-margin-bottom">Previous</button>
