--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@ tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies con
 </div>
 </div>
 </div>
-</div>
-<hr>
+</div><hr>
 <div class="w3-card-4 w3-margin w3-white">
 <img src="/w3images/bridge.jpg" alt="Norway" style="width:100%">
 <div class="w3-container">
@@ -92,8 +91,7 @@ tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies con
 <span>Lorem ipsum dipsum</span>
 </li>  
 </ul>
-</div>
-<hr>
+</div><hr>
 <div class="w3-card w3-margin">
 <div class="w3-container w3-padding">
 <h4>Tags</h4>
