--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="w3-row">
         <div class="w3-col l8 s12">
           <div class="w3-card-4 w3-margin w3-white">
-            <img src="/w3images/woods.jpg" alt="Nature" style="width:100%">
+            <img src="images/silverstone.png" alt="Nature" style="width:100%">
             <div class="w3-container">
               <h3><b>GP di Gran Bretagna</b></h3>
               <h5>Silverstone, <span class="w3-opacity">3 luglio 2022</span></h5>
@@ -37,7 +37,7 @@
             </div>
           </div><hr>
           <div class="w3-card-4 w3-margin w3-white">
-            <img src="/w3images/bridge.jpg" alt="Norway" style="width:100%">
+            <img src="images/hungaroring.png" alt="Norway" style="width:100%">
             <div class="w3-container">
               <h3><b>GP di Ungheria</b></h3>
               <h5>Hungaroring, <span class="w3-opacity">31 luglio 2022</span></h5>
